--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "nodemon": "^2.0.19",
     "prettier-eslint-cli": "^7.0.0",
     "react-test-renderer": "^18.2.0",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.54.4",
+    "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
